fix gap and title font size in display case

--- a/css/displaycase.css
+++ b/css/displaycase.css
@@ -91,3 +91,7 @@
 .display-case-text {
   font-size: 10px;
 }
+
+h2.display-case-title {
+  font-size: 27px;
+}
